--- a/Portfolio Site/Portfolio.css
+++ b/Portfolio Site/Portfolio.css
@@ -28,7 +28,7 @@ header{
     position: absolute;
     top: 0;
 }
-
+/*Parallax Images will need to be updated to have no gap for logo etc.*/
 #back{
     transform: translateZ(-3px) scale(4);
     background-image: url(images/Triangle_Line.png);
@@ -60,17 +60,19 @@ header{
 
 #HamNav{
     display: none;
-    width: 20vw;
-    background-color: rgba(255, 255, 255, .8);
+    width: 100vw;
+    background-color: rgba(255, 255, 255, .9);
     position: absolute;
     right: 0vh;
-    top: 10vh;
+    top: 0vh;
+    z-index: 1000;
       
 }
 
 #HamNav a{
     font-family: Source Sans Pro;
     text-decoration: none;
+    font-size: 1.5em;
     display: block;
     color: #958bfb;
     padding: 2vh;
